# illumix_lite

./: Cargo.toml
Website/: index.html
src/: artnet.rs  dmx.rs  effect.rs  main.rs  patching.rs  present.rs
src/fixture_lib/: fixture.rs  lib.rs  universe.rs
static/: index.html
