[package]
name = "rust_socket"
version = "0.1.0"
edition = "2024"

[dependencies]
artnet_protocol = "0.4.4"
futures = "0.3.31"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
warp = { version = "0.4.2", features = ["server", "websocket"] }
